# Odnokursniki

./: .gitignore  .gitmodules  client.cpp  odnokursniki.cpp  odnokursniki_server.cpp
OLD_VERSION_DO_NOT_COMPILE!!!/src/: CmakeLists.txt  client.c  client.cpp  memory.h  messages.cpp  messages.h  server.c  server.cpp
OLD_VERSION_DO_NOT_COMPILE!!!/src/client_ui/: client_ui.pro  mainwindow.ui
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/: chat_base.h  chat_configs.h  client.h  messages.h  networking.h  server.h  threads_safe.h
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/chat_configs/: CMakeLists.txt  chat_configs.cpp  chat_configs.h
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/list/: CmakeLists.txt
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/list/graphviz/: test.gv
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/list/lib/: list.h  list_debug.h  memory.h
OLD_VERSION_DO_NOT_COMPILE!!!/src/inc/messages/: CMakeLists.txt  messages.cpp  messages.h
OLD_VERSION_DO_NOT_COMPILE!!!/src/old_c_version/: client.c  server.c
OLD_VERSION_DO_NOT_COMPILE!!!/src/src/: chat_base.cpp  client.cpp  messages.cpp  networking.cpp  sender.cpp  server.cpp  threads_safe.cpp
backend/: CMakeLists.txt  client.cpp  client.h  client_test.cpp  common_include.h  connection.h  message.h  message_dump.cpp  message_dump.h  server.cpp  server.h  thread_safe_queues.h
inc/: chat_base.h  chat_configs.h  client.h  networking.h  sender.h  threads_safe.h
inc/list/: CmakeLists.txt
inc/list/src/: list_debug.cpp
inc/messages/: CMakeLists.txt  messages.h
src/: client.cpp  networking.cpp  sender.cpp  server.cpp
(+2 files in other folders)
